--- a/application.yml
+++ b/application.yml
@@ -15,17 +15,17 @@ lavalink:
     bufferDurationMs: 2000 # The duration of the NAS buffer. Higher values fare better against longer GC pauses
     frameBufferDurationMs: 10000 # How many milliseconds of audio to keep buffered
     youtubePlaylistLoadLimit: 1
-    playerUpdateInterval: 10
+    playerUpdateInterval: 30
     youtubeSearchEnabled: true
     soundcloudSearchEnabled: true
     gc-warnings: true
     ratelimit:
       retryLimit: 3
-      strategy: "RotateOnBan" # RotateOnBan | LoadBalance | NanoSwitch | RotatingNanoSwitch
+      strategy: "LoadBalance" # RotateOnBan | LoadBalance | NanoSwitch | RotatingNanoSwitch
 
 metrics:
   prometheus:
-    enabled: false
+    enabled: true
     endpoint: /metrics
 
 sentry:
