--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ server:
   address: 0.0.0.0
 lavalink:
   server:
-    password: REPLACEPASSWORD
+    password: "REPLACEPASSWORD"
     sources:
       youtube: true
       bandcamp: true
