--- a/applicate.yml
+++ b/applicate.yml
@@ -3,7 +3,7 @@ server:
   address: 0.0.0.0
 lavalink:
   server:
-    password: "REPLACEPASSWORD"
+    password: REPLACEPASSWORD
     sources:
       youtube: true
       bandcamp: true
@@ -20,8 +20,9 @@ lavalink:
     soundcloudSearchEnabled: true
     gc-warnings: true
     ratelimit:
+      searchTriggersFail: true
       retryLimit: 3
-      strategy: "LoadBalance" # RotateOnBan | LoadBalance | NanoSwitch | RotatingNanoSwitch
+      strategy: "RotateOnBan" # RotateOnBan | LoadBalance | NanoSwitch | RotatingNanoSwitch
 
 metrics:
   prometheus:
